--- a/hpbd.html
+++ b/hpbd.html
@@ -231,8 +231,8 @@
                 angryimg.style.display = "block";
                 angryimg.addEventListener("click", () => {
                     angryimg.style.display = "none";
-                    myPopupMusic.style.display = "none";
-                    drawheart();
+                    //myPopupMusic.style.display = "none";
+                    //drawheart();
                 });
             }
             else {
